--- a/bookservices.yml
+++ b/bookservices.yml
@@ -17,3 +17,5 @@ spring:
     username: sa
     password: password
     driverClassName: org.h2.Driver
+  kafka:
+    bootstrap-servers: localhost:29092
